# EasyGPT-Langchain

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml  github-ci.yaml  tests.yaml
tests/: test_init_commit.py
