[tool.poetry]
name = "easygpt-langchain"
version = "0.0.1"
description = "EasyGPT is a Python library designed to simplify the utilization of numerous GPT-related tools and Langchain agents."
authors = ["Tarık Kaan Koç <tarikkaan1koc@gmail.com>", "Kadir Nar <kadir.nar@hotmail.com>"]
maintainers = ["Tarık Kaan Koç <tarikkaan1koc@gmail.com>", "Kadir Nar <kadir.nar@hotmail.com>","Bahadır Araz <bahadiraraz@protonmail.com>"]
readme = "README.md"
packages = [{include = "easygpt-langchain"}]
homepage = "https://github.com/CoomingSoon/EasyGPT-Langchain"
repository = "https://github.com/CoomingSoon/EasyGPT-Langchain"
documentation = "https://github.com/CoomingSoon/EasyGPT-Langchain/blob/main/README.md"
keywords = ["easygpt-langchain"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12.0"
transformers = "^4.30.2"
safetensors = "^0.3.1"
huggingface-hub = "^0.16.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
bandit = "^1.7.4"
debugpy = "^1.6.6"
rope = "^1.7.0"
wheel = "^0.38.4"
setuptools = "^67.4.0"
coverage = "^7.2.1"
pre-commit = "^3.1.1"
pyupgrade = "^3.3.1"
ruff = "^0.0.244"
pytest = "^7.2.1"
toml = "^0.10.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
parameterized = "^0.9.0"
tox = "^4.6.4"



[tool.isort]
line_length = 88
profile = "black"

[tool.bandit]
target = ["tests", "easygpt-langchain"]
tests = ["B201", "B301"]

[tool.autoflake]
check = true
imports = ["easygpt-langchain"]


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
