[project]
name = "easygpt"
version = "0.0.1"
description = "EasyGPT is a Python library designed to simplify the utilization of numerous GPT-related tools and Langchain agents."
authors = [
    {name = "Bahadır Araz", email = "bahadiraraz@protonmail.com"},
    {name = "Tarık Kaan Koç", email = "tarikkaan1koc@gmail.com"},
    {name = "Kadir Nar", email = "kadir.nar@hotmail.com"},
]
dependencies = [
    "transformers<5.0.0,>=4.30.2",
    "safetensors<1.0.0,>=0.3.1",
    "huggingface-hub<1.0.0,>=0.16.3",
]
requires-python = ">=3.8.1,<3.12"
readme = "README.md"
license = {text = "Apache-2.0"}
maintainers = [
    {name = "Tarık Kaan Koç", email = "tarikkaan1koc@gmail.com"},
    {name = "Kadir Nar", email = "kadir.nar@hotmail.com"},
    {name = "Bahadır Araz", email = "bahadiraraz@protonmail.com"},
]
keywords = ["GPT", "GPT-3", "GPT-4", "Langchain", "NLP", "Python", "AI text generation", "NLP automation", "language translation", "language models", "AI language models", "easy NLP", "easy GPT", "Python", "library", "minimal coding", "efficiency", "automation", "simplified GPT", "simplified Langchain", "minimal code NLP", "fast NLP tasks", "streamlined language processing"]
classifiers = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Operating System :: OS Independent", "Topic :: Software Development :: Libraries :: Application Frameworks", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Libraries", "Topic :: Software Development", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Mathematics", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "Intended Audience :: Education"]

[project.urls]
homepage = "https://github.com/CoomingSoon/EasyGPT"
repository = "https://github.com/CoomingSoon/EasyGPT"
documentation = "https://github.com/CoomingSoon/EasyGPT/blob/main/README.md"

[project.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
bandit = "^1.7.4"
debugpy = "^1.6.6"
rope = "^1.7.0"
wheel = "^0.38.4"
setuptools = "^67.4.0"
coverage = "^7.2.1"
pre-commit = "^3.1.1"
pyupgrade = "^3.3.1"
ruff = "^0.0.244"
pytest = "^7.2.1"
toml = "^0.10.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
parameterized = "^0.9.0"
tox = "^4.6.4"

[tool.isort]
line_length = 88
profile = "black"

[tool.bandit]
target = ["tests", "easygpt"]
tests = ["B201", "B301"]

[tool.autoflake]
check = true
imports = ["easygpt"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pdm.build]
includes = [
    "easygpt",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
